# rpcv2-historical

./: CHANGELOG.md  CONTRIBUTING.md  COST_REPORT.md  README.md  go.mod
.github/workflows/: bench.yml  build.yml
bench/: README.md
cmd/bench/: main.go
cmd/rpcv2-hist/: main.go
helm/: README.md
helm/rpcv2-hist/: Chart.yaml  values.yaml
helm/rpcv2-hist/templates/: deployment.yaml  service.yaml
internal/api/: handlers.go  jsonrpc.go  middleware.go
internal/cache/: ttl_sharded.go
internal/clickhouse/: conn.go  migrate.go  sql.go
internal/clickhouse/migrations/: 001_init_blocks.sql  002_init_transactions.sql  003_init_sigs_for_address.sql
internal/domain/: types.go
internal/index/: fractal_idx.go
internal/parquet/: reader.go  writer.go
internal/security/: jwt.go  rotate.go  validator.go
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs
scripts/: docker-compose.yml  gen-keypair.sh  seed.sh
spec/: openrpc.json
